test/failed-3/secret/type-reconstruction/ill-typed/exceptions/exceptions-2.stella
// ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION

language core;

extend with #exceptions, #exception-type-declaration, #type-reconstruction;

exception type = Bool

fn main(a : auto) -> auto {
  return (throw(0))(throw(0))
}
